--- a/DivinityModManagerCore/DivinityModManagerCore.csproj
+++ b/DivinityModManagerCore/DivinityModManagerCore.csproj
@@ -42,6 +42,11 @@
 		<Reference Include="System.Web" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\NexusAPI\NexusAPI.csproj">
+			<Name>NexusAPI</Name>
+		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
