--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -88,14 +88,15 @@
 		<PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
 		<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
-		<PackageReference Include="ReactiveUI" Version="19.5.41">
+		<PackageReference Include="ReactiveUI" Version="19.5.72">
 		  <TreatAsUsed>true</TreatAsUsed>
 		</PackageReference>
 		<PackageReference Include="ReactiveUI.Events.WPF" Version="15.1.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
-		<PackageReference Include="ReactiveUI.WPF" Version="19.5.41" />
+		<PackageReference Include="ReactiveUI.WPF" Version="19.5.72" />
 		<PackageReference Include="SharpCompress" Version="0.36.0" />
 		<PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
