--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -78,9 +78,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AdonisUI" Version="1.17.1">
-		  <TreatAsUsed>true</TreatAsUsed>
-		</PackageReference>
+		<PackageReference Include="AdonisUI" Version="1.17.1" TreatAsUsed="true"/>
 		<PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
 		<PackageReference Include="Autoupdater.NET.Official" Version="1.8.5" />
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.0" />
@@ -88,11 +86,10 @@
 		<PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
 		<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
-		<PackageReference Include="ReactiveUI" Version="19.5.72">
-		  <TreatAsUsed>true</TreatAsUsed>
-		</PackageReference>
+		<PackageReference Include="ReactiveUI" Version="19.5.72" TreatAsUsed="true"/>
 		<PackageReference Include="ReactiveUI.Events.WPF" Version="15.1.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
 		<PackageReference Include="ReactiveUI.WPF" Version="19.5.72" />
 		<PackageReference Include="SharpCompress" Version="0.36.0" />
 		<PackageReference Include="SharpVectors.Wpf" Version="1.8.4" />
