Specify no-ui branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,4 @@
 [submodule "AutoUpdater.NET"]
 	path = External/AutoUpdater.NET
 	url = https://github.com/LaughingLeader/AutoUpdater.NET
+	branch=no-ui
