--- a/src/Tests/Directory.build.props
+++ b/src/Tests/Directory.build.props
@@ -2,4 +2,5 @@
     <PropertyGroup>
         <BaseIntermediateOutputPath>$(SolutionDir)obj\Tests\</BaseIntermediateOutputPath>
     </PropertyGroup>
+	<Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 </Project>
