--- a/src/Toolbox/Directory.build.props
+++ b/src/Toolbox/Directory.build.props
@@ -2,4 +2,5 @@
     <PropertyGroup>
         <BaseIntermediateOutputPath>$(SolutionDir)obj\Toolbox\</BaseIntermediateOutputPath>
     </PropertyGroup>
+	<Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 </Project>
