--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,11 +1,11 @@
 <Project>
     <PropertyGroup>
-		<TargetFramework>net8.0-windows</TargetFramework>
+		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>ModManager</RootNamespace>
-		<Configurations>Debug;Release;Publish;PublishTest</Configurations>
 		<Platforms>AnyCPU</Platforms>
 		<PlatformTarget>x64</PlatformTarget>
+		<Configurations>Debug;Release;Publish;PublishTest</Configurations>
 		<NeutralLanguage>en</NeutralLanguage>
 		<SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
 		<SupportedCultures>en-US</SupportedCultures>
