--- a/src/Desktop-WPF/Directory.build.props
+++ b/src/Desktop-WPF/Directory.build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <BaseIntermediateOutputPath>$(SolutionDir)obj\GUI\</BaseIntermediateOutputPath>
+        <BaseIntermediateOutputPath>$(SolutionDir)obj\Desktop-WPF\</BaseIntermediateOutputPath>
     </PropertyGroup>
 	<Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 </Project>
