--- a/src/Desktop-WPF/Desktop-WPF.csproj
+++ b/src/Desktop-WPF/Desktop-WPF.csproj
@@ -61,12 +61,7 @@
 	</Target>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\External\AutoUpdater.NET\AutoUpdater.NET\AutoUpdater.NET.csproj" />
-		<ProjectReference Include="..\..\External\lslib\LSLibNative\LSLibNative.vcxproj" />
-		<ProjectReference Include="..\..\External\lslib\LSLib\LSLib.csproj" />
-		<ProjectReference Include="..\..\External\NexusModsNET\NexusModsNET\NexusModsNET.csproj" />
-		<ProjectReference Include="..\Core\Core.csproj" />
-		<ProjectReference Include="..\Services\Services.csproj" />
+		<ProjectReference Include="..\ModManager\ModManager.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
