--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>ModManager</RootNamespace>
 		<Platforms>AnyCPU</Platforms>
