--- a/src/GUI/Desktop-WPF/Desktop-WPF.csproj
+++ b/src/GUI/Desktop-WPF/Desktop-WPF.csproj
@@ -2,6 +2,8 @@
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<UseWPF>true</UseWPF>
+		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+		
 		<StartupObject>ModManager.Program</StartupObject>
 		<ApplicationIcon>BG3ModManager.ico</ApplicationIcon>
 
