--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<UseWPF>true</UseWPF>
 		<RootNamespace>ModManager</RootNamespace>
 		<AssemblyName>ModManager.Core</AssemblyName>
+
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+
+		<DefineConstants Condition=" '$(TargetFrameworkVersion)' == 'net8.0-windows10.0.22621.0' or '$(UseWPF)' == 'true' ">WPF</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -13,15 +17,13 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
-		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Octokit" Version="10.0.0" />
-		<PackageReference Include="System.Reactive" Version="6.0.0" />
-		<PackageReference Include="ReactiveUI" Version="19.5.72" />
+		<PackageReference Include="ReactiveUI" Version="19.6.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
 		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" PrivateAssets="all" />
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="SharpCompress" Version="0.36.0" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 </Project>
