--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -25,5 +25,6 @@
 		<PackageReference Include="SharpCompress" Version="0.36.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+		<PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
 	</ItemGroup>
 </Project>
