--- a/src/GUI/Desktop-WPF/Desktop-WPF.csproj
+++ b/src/GUI/Desktop-WPF/Desktop-WPF.csproj
@@ -27,6 +27,7 @@
 		
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Publish' or '$(Configuration)' == 'PublishTest'">
