--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,6 +7,8 @@
 		<Nullable>enable</Nullable>
 
 		<DefineConstants Condition=" '$(TargetFrameworkVersion)' == 'net8.0-windows10.0.22621.0' or '$(UseWPF)' == 'true' ">WPF</DefineConstants>
+
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
