--- a/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
+++ b/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
@@ -21,6 +21,7 @@
 		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
