--- a/src/Toolbox/Toolbox.csproj
+++ b/src/Toolbox/Toolbox.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	
 	<ItemGroup>
