--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -6,7 +6,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 
-		<DefineConstants Condition=" '$(TargetFrameworkVersion)' == 'net8.0-windows10.0.22621.0' or '$(UseWPF)' == 'true' ">WPF</DefineConstants>
+		<DefineConstants Condition="'$(UseWPF)' == 'true' ">WPF</DefineConstants>
 
 		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
@@ -19,7 +19,6 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Octokit" Version="10.0.0" />
 		<PackageReference Include="ReactiveUI" Version="19.6.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
