--- a/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
+++ b/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
@@ -24,6 +24,10 @@
 		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)' == 'AoT'">
+		<PublishAot>true</PublishAot>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\ModManager\ModManager.csproj" />
 	</ItemGroup>
