--- a/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
+++ b/src/GUI/Desktop-Avalonia/Desktop-Avalonia.csproj
@@ -33,6 +33,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Avalonia.Desktop" Version="11.1.3" />
+		<PackageReference Include="Avalonia.Desktop" Version="11.2.0-beta1" />
 	</ItemGroup>
 </Project>
