--- a/src/GUI/ModManager/ModManager.csproj
+++ b/src/GUI/ModManager/ModManager.csproj
@@ -17,22 +17,22 @@
 
 	<ItemGroup>
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.3" />
+		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0-beta1" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Avalonia" Version="11.1.3" />
-		<PackageReference Include="Avalonia.Desktop" Version="11.1.3" />
-		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.3" />
-		<PackageReference Include="Avalonia.ReactiveUI" Version="11.1.3" />
+		<PackageReference Include="Avalonia" Version="11.2.0-beta1" />
+		<PackageReference Include="Avalonia.Desktop" Version="11.2.0-beta1" />
+		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.0-beta1" />
+		<PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0-beta1" />
 		<PackageReference Include="Avalonia.ReactiveUI.Events" Version="0.10.22" />
 		<PackageReference Include="Avalonia.Svg.Skia" Version="11.1.0" />
-		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.3" />
+		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.0-beta1" />
 		<PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0" />
 		<PackageReference Include="Avalonia.Xaml.Interactions" Version="11.1.0" />
 		<PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
 		<PackageReference Include="Material.Icons.Avalonia" Version="2.1.10" />
-		<PackageReference Include="SukiUI" Version="6.0.0-beta4" ExcludeAssets="contentFiles" />
+		<PackageReference Include="SukiUI" Version="6.0.0-beta8" ExcludeAssets="contentFiles" />
 		<PackageReference Include="AsyncImageLoader.Avalonia" Version="3.3.0" />
 		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" PrivateAssets="all" />
 		<PackageReference Include="DynamicData" Version="9.0.4" />
