--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="ReactiveUI" Version="20.1.1" />
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
 		<PackageReference Include="ReactiveUI.Validation" Version="4.0.9" />
+		<PackageReference Include="DynamicData" Version="9.0.4" />
 		<PackageReference Include="Splat" Version="15.1.1" />
 		<PackageReference Include="Splat.DependencyInjection.SourceGenerator" Version="1.2.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
 		<PackageReference Include="System.IO.Abstractions" Version="21.0.29" />
