--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -24,15 +24,15 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
-		<PackageReference Include="Octokit" Version="13.0.1" />
-		<PackageReference Include="ReactiveUI" Version="20.1.1" />
-		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
-		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" PrivateAssets="all" />
-		<PackageReference Include="DynamicData" Version="9.0.4" />
-		<PackageReference Include="SharpCompress" Version="0.37.2" />
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
-		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
-		<PackageReference Include="System.IO.Abstractions" Version="21.0.29" />
+		<PackageReference Include="Gameloop.Vdf" />
+		<PackageReference Include="Octokit" />
+		<PackageReference Include="ReactiveUI" />
+		<PackageReference Include="ReactiveUI.Fody" />
+		<PackageReference Include="ConfigureAwait.Fody" PrivateAssets="all" />
+		<PackageReference Include="DynamicData" />
+		<PackageReference Include="SharpCompress" />
+		<PackageReference Include="System.Net.Http" />
+		<PackageReference Include="System.Text.RegularExpressions" />
+		<PackageReference Include="System.IO.Abstractions" />
 	</ItemGroup>
 </Project>
