--- a/src/Toolbox/Toolbox.csproj
+++ b/src/Toolbox/Toolbox.csproj
@@ -10,6 +10,6 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-	  <PackageReference Include="PowerArgs" Version="4.0.3" />
+	  <PackageReference Include="PowerArgs" />
 	</ItemGroup>
 </Project>
