--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoUpdateViaGitHubRelease" />
 		<PackageReference Include="ConfigureAwait.Fody" PrivateAssets="all" />
 		<PackageReference Include="System.Reactive"  />
 		<PackageReference Include="ReactiveUI" />
