Reorganize and fix up service/util usage
Move GetInitialStartingDirectory, use IFileSystemService, refactor FileUtils.TryOpenPath to ProcessHelper.TryOpenPath

--- a/src/GUI/ModManager/ModManager.csproj
+++ b/src/GUI/ModManager/ModManager.csproj
@@ -66,11 +66,14 @@
 
 	<ItemGroup>
 		<!-- Exclude the output of source generators from the compilation -->
+		<AvaloniaXaml Remove="Models\Mod\**" />
 		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+		<Compile Remove="Models\Mod\**" />
 		<None Include="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Models\Mod\" />
+	  <EmbeddedResource Remove="Models\Mod\**" />
+	  <None Remove="Models\Mod\**" />
 	</ItemGroup>
 </Project>
